2005-11-09  Charles Levert  <charles_levert@gna.org>

	* doc/grep.1, doc/grep.texi: Advise users to test for
	  "exit_status > 1" instead of "exit_status == 2" in order to
	  detect errors, for portability with other POSIX-compliant
	  implementations.

2005-11-09  Charles Levert  <charles_levert@gna.org>

	The following set of changes aims to make "egrep" and "fgrep"
	minimal executable programs for legacy applications, instead of
	shell scripts.  This "fgrep" is much smaller than "grep".
	This set of changes appears more daunting than it really is.

	* src/egrep.c, src/fgrep.c, src/esearch.c, src/fsearch.c: New files
	  that #define either EGREP_PROGRAM or FGREP_PROGRAM and #include
	  the corresponding generic (i.e., non e or f specific) *.c file.
	* src/grepmat.c: Remove whole file.
	* src/Makefile.am: Remove no-dependencies from AUTOMAKE_OPTIONS.
	  Add definitions to make "egrep" and "fgrep" specific standalone
	  executable programs that only use the source files they need.
	  Remove rules for "egrep" and "fgrep" shell scripts.
	* src/grep.h: #define GREP_PROGRAM if both EGREP_PROGRAM and
	  FGREP_PROGRAM are #undef.  Only declare matchers[] in this case
	  along with the compile_fp_t and execute_fp_t function pointers
	  typedefs, otherwise declare prototypes for straight compile()
	  and execute() functions for the specialized "egrep" and "fgrep"
	  programs.  Remove the extern declaration for matcher.
	  Define COMPILE_RET, COMPILE_ARGS, EXECUTE_RET, EXECUTE_ARGS,
	  COMPILE_FCT, and EXECUTE_FCT helper preprocessor macros.
	* src/grep.c (short_options, long_options, usage, main): Only
	  support -G, -E, -F, -P, and -X for GREP_PROGRAM, but not for
	  EGREP_PROGRAM or FGREP_PROGRAM.  Customize usage messages.
	* src/grep.c (set_limits): New function with unchanged code,
	  called from main(), because it shouldn't be in install_matcher()
	  since it was already matcher-independent.
	* src/grep.c (matcher): Add as static, only for GREP_PROGRAM.